<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/user_update" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_20">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="昵称"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/nameView"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="头像"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/user_avatar_file_content"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="是否为家庭管理员"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <RadioGroup
                    android:id="@+id/user_type_wrap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/user_type_admin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/user_unlock_yes" />

                    <RadioButton
                        android:id="@+id/user_type_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/user_unlock_no" />

                </RadioGroup>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="家庭成员Id"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/user_id_view"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="受邀请账号"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/account_View"
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="国家码"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/countryCode_View"
                    android:layout_width="200dp"
                    android:text="86"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="邀请码"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/invitationCode_View"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="成员角色"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/role_View"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp_15"
                android:text="-1：自定义角色、0：普通成员、1：管理员、2：所有者、-999：非法角色" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_15"
                android:paddingBottom="15dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="是否需要受邀请者同意"
                    android:layout_marginBottom="8dp"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/autoAccept_wrap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/autoAccept_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:checked="true"
                        android:text="自动接受家庭加入" />

                    <RadioButton
                        android:id="@+id/autoAccept_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="需要受邀请者同意" />

                </RadioGroup>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <Button
            android:id="@+id/edit_user_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_update" />

    </RelativeLayout>

</LinearLayout>